2009-12-26  Romain Francois <francoisromain@free.fr>
	* src/RcppSexp.{h,cpp} : added std::set<{int,double,Rbyte,string}> as
	accepted input type for the RcppSexp class (needed by RProtoBuf)

	* inst/examples/RcppInline/RcppSexpTests.r: examples/tests of the above

2009-12-21  Romain Francois <francoisromain@free.fr>
	
	* src/RcppSexp.{h,cpp} : support for raw vector added into RcppSexp

	* inst/examples/RcppInline/RcppSexpTests.r: examples of raw vector
	support

2009-12-20  Dirk Eddelbuettel  <edd@debian.org>

        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: Minor
	  simplifications using new RcppSexp types, added third example

2009-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.0

	* DESCRIPTION: Descrition fields reworded and expanded to explicitly
	  mention 'inlining' ability as well as simple SEXP support.

	* src/RcppSexp.{h,cpp}: Switch to R_PreserveObject and R_ReleaseObject
	  with a big thanks to Romain for the most appropriate suggestion
	* src/RcppSexp.{h,cpp}: Added converters for vectors of
	  int, double, and std::string vectors
	* src/RcppResultsSetp.{h,cpp}: Added simple single SEXP return
	* src/RcppCommon.{h,cpp}: Adding simple logging facility
	* inst/examples/RcppInline/RcppSexpTests.r: expanded for new types

2009-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Another improvement for Rcpp use
        * inst/examples/RcppInline/RcppSimpleExamples.r: Another simple case

2009-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Improved / simplified in light of getting it to
 	  work on Windoze too so switched to setting env var explicitly;
	  also split into three args for CPPFLAGS, CXXFLAGS and LIBS
	* man/RcppInline.Rd: Updated accordingly to reflect new args
        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: Idem

2009-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppSexp.{h,cpp}: Added simple RcppSexp class for simple